grass (7.0.0-1~exp2) UNRELEASED; urgency=medium

  * Use upstream grass startup script, and install custom x-grass7 as x-grass70.
  * Add Conflicts/Provides/Replaces on the grass7* packages by upstream.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 21 Feb 2015 18:46:48 +0100

grass (7.0.0-1~exp1) experimental; urgency=medium

  * New upstream release.
  * Update python-ctypes-ternary.patch to use if/else instead of and/or.
  * Drop check4dev patch, rely on upstream check.
  * Add build dependency on libpq-dev to grass-dev for libpq-fe.h.
  * Drop patches applied upstream, refresh remaining patches.
  * Update symlinks for images switched from jpg to png.

 -- Bas Couwenberg <sebastic@debian.org>  Fri, 20 Feb 2015 23:12:08 +0100

grass (7.0.0~rc2-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Remove additional Doxygen files on clean.
  * Drop upstream tarball repacking, fixed upstream.
  * Drop patches applied upstream, refresh remaining patches.
  * Add build dependencies on: zlib1g-dev, python-ply, python-pil.
  * Update copyright file, update copyright years.

 -- Bas Couwenberg <sebastic@debian.org>  Mon, 09 Feb 2015 08:53:56 +0100

grass (7.0.0~rc1+ds1-1~exp2) experimental; urgency=medium

  * Add patch to treat GNU/{Hurd,kFreeBSD} like Linux in SC_CONFIG_CFLAGS.
  * Add patch to fix Python ctypes conversion for stat64 struct on Hurd.
  * Add patch to prevent build failures by ignoring HTML description
    errors.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 08 Feb 2015 18:23:42 +0100

grass (7.0.0~rc1+ds1-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Repack upstream tarball, remove precompiled Python objects.
  * Add upstream metadata.
  * Update gbp.conf and Vcs-Git URL to use the experimental branch.
  * Update watch file for GRASS 7.0.
  * Drop build dependencies for Tcl/Tk, add build dependencies:
    python-numpy, libnetcdf-dev, netcdf-bin, libblas-dev, liblapack-dev