@@ -46,7 +46,8 @@ Build-Depends: autoconf2.13,
                libblas-dev,
                liblapack-dev,
                unixodbc-dev,
-               zlib1g-dev
+               zlib1g-dev,
+               liblas-dev
 Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/cgit/pkg-grass/grass.git
 Vcs-Git: git://anonscm.debian.org/pkg-grass/grass.git -b experimental
