@@ -3,7 +3,7 @@ usr/share/grass70/gui/images usr/lib/grass70/gui/images
 
 usr/share/grass70/gui/wxpython/animation/wxGUI_animation_tool.jpg      usr/lib/grass70/gui/wxpython/animation/wxGUI_animation_tool.jpg
 usr/share/grass70/gui/wxpython/dbmgr/dbmgr_frame.jpg                   usr/lib/grass70/gui/wxpython/dbmgr/dbmgr_frame.jpg
-usr/share/grass70/gui/wxpython/gmodeler/gmodeler_frame.png             usr/lib/grass70/gui/wxpython/gmodeler/gmodeler_frame.png
+usr/share/grass70/gui/wxpython/gmodeler/gmodeler_frame.jpg             usr/lib/grass70/gui/wxpython/gmodeler/gmodeler_frame.jpg
 usr/share/grass70/gui/wxpython/iclass/iclass_frame.jpg                 usr/lib/grass70/gui/wxpython/iclass/iclass_frame.jpg
 usr/share/grass70/gui/wxpython/mapswipe/mapswipe_tsunami.jpg           usr/lib/grass70/gui/wxpython/mapswipe/mapswipe_tsunami.jpg
 usr/share/grass70/gui/wxpython/psmap/psmap_frame.jpg                   usr/lib/grass70/gui/wxpython/psmap/psmap_frame.jpg
@@ -15,6 +15,6 @@ usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_5.png           usr/lib/g
 usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_6.png           usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_6.png
 usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_7.png           usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_7.png
 usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_8.png           usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_8.png
-usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sampleAreas.png usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sampleAreas.png
+usr/share/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sampleAreas.jpg usr/lib/grass70/gui/wxpython/rlisetup/g_gui_rlisetup_sampleAreas.jpg
 usr/share/grass70/gui/wxpython/timeline/timeline_2D.jpg                usr/lib/grass70/gui/wxpython/timeline/timeline_2D.jpg
 usr/share/grass70/gui/wxpython/vdigit/vdigit_toolbar.jpg               usr/lib/grass70/gui/wxpython/vdigit/vdigit_toolbar.jpg
