@@ -55,14 +55,15 @@ override_dh_clean:
 		$(RM) -r lib/$$LIBRARY/html lib/$$LIBRARY/latex ; \
 	done
 
-override_dh_auto_clean:
-	[ ! -f $(CURDIR)/include/Make/Platform.make ] || $(MAKE) distclean
-
-override_dh_auto_configure:
+templates:
 	for TEMPLATE in $(TEMPLATES) ; do \
 	    sed -e 's/@VERSION@/$(VERSION)/g' -e 's/@ABI@/$(ABI)/g' $$TEMPLATE > `echo $$TEMPLATE | sed 's/.in$$//'` ; \
 	done
 
+override_dh_auto_clean:
+	[ ! -f $(CURDIR)/include/Make/Platform.make ] || $(MAKE) distclean
+
+override_dh_auto_configure: templates
 	dh_auto_configure -- \
                     --prefix=/usr/lib \
                     --enable-socket \
@@ -268,3 +269,4 @@ override_dh_shlibdeps:
 override_dh_compress:
 	dh_compress -XAUTHORS
 
+.PHONY: templates
