@@ -1,7 +1,13 @@
 grass (7.0.0-1~exp2) UNRELEASED; urgency=medium
 
+  [ Bas Couwenberg ]
   * Use upstream grass startup script, and install custom x-grass7 as x-grass70.
   * Add Conflicts/Provides/Replaces on the grass7* packages by upstream.
+
+  [ Francesco Paolo Lovergine ]
+  * Added liblas-dev b-d to support new Lidar modules.
+  * Introduced a separate tag in debian/rules to regenerate debian stuff from 
+    templates.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 21 Feb 2015 18:46:48 +0100
 
